taxonomy items alignment and pagination flex fix

--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -293,7 +293,7 @@
 .taxonomy-index {
   display: grid;
   grid-column-gap: 2em;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(28px, 1fr));
   margin: 0;
   padding: 0;
   font-family: $base-font-family;
